# data-model

./: .gitignore  404.qmd  CITATION.cff  CONTRIBUTING.md  Gemfile  LICENSE  README.md  _brand.yml  _config.yml  _quarto.yml  about.md  about.qmd  changelog.qmd  contribute.qmd  design-process.qmd  index.md  index.qmd  pyproject.toml  vocabulary.qmd
1-getting_started/: index.qmd
2-common_principles/: 01-guideline.qmd  02-naming_things.qmd  02.1-general.qmd  02.2-naming-people.qmd  02.2-naming_people.qmd  02.3-naming-tasks.qmd  02.4-naming-stimuli.qmd  02.5-naming-responses.qmd  02.5-naming_responses.qmd  02.6-naming_temporal_variables.qmd  02.7-naming_data_and_files.qmd  03-units_and_values.qmd  04-file_formats.qmd  05-indexing.qmd  05-tidy_tables.qmd  06-tidy_tables.qmd  07-organizing-datasets.qmd  08-standards.qmd  index.qmd
3-specification/: index.qmd
5-change_logs/: index.qmd
6-contribute/: index.qmd
_includes/: head_custom.html  header_custom.html  nav.html  toc_children.html
_pages/: 2020-12-15-welcome-to-jekyll.md  about.md  glossary.md  intro.md  introduction.md  other.md  privacy.md
_spec/: 1-cognitive-tests.md  2-surveys.md  3-task-instructions.md
auto-generated/: Click.qmd  Instrument.qmd  Option.qmd  OptionComponent.qmd  OptionPresentation.qmd  OptionPresentationComponent.qmd  Response.qmd  Stimulus.qmd  StimulusComponent.qmd  Trial.qmd  VocabularyDemographics.qmd  VocabularyGeneral.qmd  VocabularySuffixesAggregation.qmd  VocabularySuffixesGeneral.qmd  VocabularySuffixesReferencing.qmd  VocabularySuffixesTransformation.qmd
concepts/: index.qmd  (+3 more)
(+360 files in other folders)
