[project]
name = "data-model"
version = "0.1.0"
description = "Behaverse Data Model is an ongoing effort to define a coherent data structure for a wide range of cognitive tests and questionnaires."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "quarto-cli>=1.6.42",
    "requests>=2.32.3",
    "linkml>=1.8.7",
    "pyarrow>=19.0.1",
    "duckdb>=1.2.2",
]
